# completion-telegram-bridge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: SPEC.md
src/completion_telegram_bridge/: __init__.py  __main__.py  api.py  cli.py  config.py  logging_setup.py  server.py  telegram_bridge.py
tests/: test_config_and_extract.py  test_voice.py
