[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "completion-telegram-bridge"
version = "0.1.0"
description = "OpenAI-compatible completion API bridge to a personal Telegram agent for Even Realities G2"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "matsei-ruka" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "telethon>=1.37.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "typer>=0.12.0",
  "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
]

[project.scripts]
ctb = "completion_telegram_bridge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/completion_telegram_bridge"]

[tool.hatch.build.targets.wheel.sources]
"src/completion_telegram_bridge" = "completion_telegram_bridge"

[tool.hatch.build.targets.sdist]
include = ["src/completion_telegram_bridge", "README.md", "docs/SPEC.md", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
